<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFEED4"
    android:orientation="vertical"
    tools:context=".mainScreen">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:contentDescription="@string/logo_desc"
        app:srcCompat="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="0.25"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fade_background"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <EditText
                android:id="@+id/editTextNumberSigned2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/matrikelnummer_eingeben"
                android:inputType="numberSigned"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#000000"
                android:textColorHint="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fade_background"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btnRunTCP"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#226569"
            android:onClick="runTCP"
            android:text="@string/btn_run"
            android:textSize="24sp"
            android:translationX="50dp"
            android:translationY="20dp"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/textViewResponseTCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/result"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="-100dp"
            android:translationY="-20dp" />

        <TextView
            android:id="@+id/textViewTCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:text="@string/tcp_feature"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="10dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white"
            android:translationY="55dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewResponseTCPResult"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:translationX="-75dp"
            android:translationY="50dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fade_background"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btnRunFeature"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#226569"
            android:onClick="runFeature"
            android:text="@string/btn_run"
            android:textSize="24sp"
            android:translationX="50dp"
            android:translationY="20dp"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/textViewFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:text="@string/erweiterung_aufgabe_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="10dp" />

        <TextView
            android:id="@+id/textViewResponseFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/result"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="-100dp"
            android:translationY="-20dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/white"
            android:translationY="55dp" />

        <TextView
            android:id="@+id/textViewResponseFeatureResult"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:translationX="-75dp"
            android:translationY="50dp" />

    </androidx.cardview.widget.CardView>
</LinearLayout>